2006-07-02  Emmanuele Bassi  <ebassi@gmail.com>

	* maps-2.10: Include GTK_TYPE_RECENT_FILTER_FLAGS to the list
	of known types.

	* xs/GtkRecentFilter.xs: Add string fields to the
	GtkRecentFilterInfo converter.

	* xs/GtkRecentManager.xs: Implement the Gtk2::RecentInfo
	boxed type and its API.

2006-07-02  Emmanuele Bassi  <ebassi@gmail.com>

	* xs/GtkRecentFilter.xs: Initial implementation of the
	Gtk2::RecentFilter object.

2006-07-02  Emmanuele Bassi  <ebassi@gmail.com>

	A xs/GtkRecentChooser.xs
	A xs/GtkRecentChooserDialog.xs
	A xs/GtkRecentChooserMenu.xs
	A xs/GtkRecentChooserWidget.xs
	A xs/GtkRecentFilter.xs
	A xs/GtkRecentManager.xs

	* maps-2.10:
	* xs_files-2.10:
	* xs/GtkRecent*.xs: Add initial support for GtkRecent; wrap
	methods for these objects:
		Gtk2::RecentChooser
		Gtk2::RecentChooserDialog
		Gtk2::RecentChooserMenu
		Gtk2::RecentChooserWidget
		Gtk2::RecentManager

2006/07/02	kaffeetisch

	* t/GtkAssistant.t, t/GtkLinkButton.t, t/GtkRadioAction.t,
	t/GtkTextBufferRichText.t: Skip some tests if gtk+ < 2.10.

	* t/GtkClipboard.t: Correct skip count.

2006/06/25	kaffeetisch

	* t/GtkSizeGroup.t: Don't assume that Gtk2::SizeGroup::add_widget
	takes a reference on the widget.  Fixes a test failure.

	* t/GtkLabel.t, xs/GtkLabel.xs: Bind and test
	gtk_label_set_line_wrap_mode and gtk_label_get_line_wrap_mode.

2006/06/24	kaffeetisch

	* t/GtkTextBuffer.t: Test the copy-target-list and
	paste-target-list properties.

	* gtk2perl.h, xs/GtkSelection.xs: Fix the GtkTargetList wrappers
	again to be fully backwards-compatible *and* use the boxed type if
	available.  This involves using a custom wrap function that always
	assumes ownership of the boxed object, just like the old wrapper
	does.  Code that uses the GtkTargetList typemaps should continue
	to work without changes.

2006/06/20	kaffeetisch

	* MANIFEST, maps-2.10, xs_files-2.10, t/GtkPageSetup.t,
	t/GtkPaperSize.t, t/GtkPrintContext.t, t/GtkPrintOperation.t,